--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://example.org/'
+baseURL: 'https://github.com/Mudassir-Nawaz/mynth'
 languageCode: 'en-us'
 title: 'My New Hugo Site'
 
